Successfully completed CRUD for roles, fixed the overflow issue for modal and reset the add forms for trooper and roles on submit

--- a/web/timetable.css
+++ b/web/timetable.css
@@ -450,7 +450,7 @@ form .page .btns button {
     border-radius: 10px;
     padding: 0 30px 30px 30px;
     width: 70vw;
-    max-height: 90vh;
+    max-height: 85vh;
     background: #fff;
     position: fixed;
     top:50%;
